Cambio flujo en fuente estatica